# study-gcp-mlops

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  doppler.yaml
1/study-ml-foundations/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.trainer  IMPLEMENTATION_REMOVED.md  Makefile  README.md  docker-compose.yml  pyproject.toml
1/study-ml-foundations/app/: Dockerfile  config.py  main.py
1/study-ml-foundations/app/api/: predict.py
1/study-ml-foundations/app/schemas/: predict.py
1/study-ml-foundations/common/: __init__.py  config.py
1/study-ml-foundations/docs/: 01_仕様と設計.md  02_移行ロードマップ.md  02_移行ロードマップ2.md  03_実装カタログ.md  04_運用.md  README.md  TASKS.md
1/study-ml-foundations/docs/教育資料/: 01_スライド.md  02_ナレーション台本.md  03_デモシナリオ.md  04_デモナレーション台本.md  05_図解.md
1/study-ml-foundations/env/config/: setting.yaml
1/study-ml-foundations/jobs/tests/: test_trainer.py
1/study-ml-foundations/ml/common/: __init__.py
1/study-ml-foundations/ml/evaluation/: __init__.py  config.py
1/study-ml-foundations/ml/pipeline/: config.py  feature_engineering.py  main.py  seed.py
1/study-ml-foundations/ml/registry/: __init__.py  artifact_store.py  metadata_store.py  model_registry.py
1/study-ml-foundations/ml/serving/: __init__.py  batch_predictor.py  predictor.py  response_builder.py
1/study-ml-foundations/ml/trainer/: train.py
1/study-ml-foundations/ml/training/: __init__.py  model_builder.py  trainer.py
1/study-ml-foundations/models/: latest
1/study-ml-foundations/models/20260417_110424_8389ce/: metrics.json
1/study-ml-foundations/pipeline/: __init__.py  main.py  seed.py
1/study-ml-foundations/pipeline/batch_serving_job/: main.py
1/study-ml-foundations/pipeline/data_job/: main.py
1/study-ml-foundations/pipeline/evaluation_job/: main.py
1/study-ml-foundations/pipeline/training_job/: main.py
1/study-ml-foundations/pipeline/workflow/: orchestration.md
1/study-ml-foundations/pipelines/tests/: test_preprocess.py
1/study-ml-foundations/scripts/: README.md  clean.py  clean.sh  core.py  test.py  test.sh
1/study-ml-foundations/scripts/app/: serve.py
1/study-ml-foundations/scripts/local/: run_all_monitor.py
1/study-ml-foundations/scripts/ml/: seed.py  train.py
1/study-ml-foundations/tests/api/: test_api.py
1/study-ml-foundations/tests/integration/: test_api.py  test_pipeline.py
1/study-ml-foundations/tests/ml/: test_evaluation.py  test_pipeline.py  test_preprocess.py  test_trainer.py
1/study-ml-foundations/tests/unit/: test_evaluation.py  test_preprocess.py  test_trainer.py
1/study-ml-foundations/tools/: check_docker_layout.py
2/study-ml-app-pipeline/: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
2/study-ml-app-pipeline/app/: config.py  main.py
2/study-ml-app-pipeline/app/api/: predict.py
2/study-ml-app-pipeline/app/services/: prediction_service.py
2/study-ml-app-pipeline/app/templates/: metrics.html
2/study-ml-app-pipeline/common/: config.py  logging.py  run_id.py
2/study-ml-app-pipeline/docs/: 01_仕様と設計.md  02_移行ロードマップ.md  03_実装カタログ.md  04_運用.md  TASKS.md
2/study-ml-app-pipeline/docs/教育資料/: 01_スライド.md  02_ナレーション台本.md  03_デモシナリオ.md  05_図解.md
2/study-ml-app-pipeline/env/config/: setting.yaml
2/study-ml-app-pipeline/ml/: container.py
2/study-ml-app-pipeline/ml/adapters/: __init__.py  filesystem_model_store.py  postgres_dataset.py  predictor.py  wandb_tracker.py
2/study-ml-app-pipeline/ml/core/: __init__.py  evaluation.py  inference.py  preprocess.py  trainer.py
2/study-ml-app-pipeline/ml/data/: feature_engineering.py  port.py  postgres_dataset.py  preprocess.py  schema.py
2/study-ml-app-pipeline/ml/ports/: __init__.py  dataset.py  model_store.py  predictor.py  tracker.py
2/study-ml-app-pipeline/ml/registry/: artifacts  filesystem_model_store.py
2/study-ml-app-pipeline/ml/serving/: inference.py  predictor.py
2/study-ml-app-pipeline/ml/training/: trainer.py
2/study-ml-app-pipeline/pipeline/batch_serving_job/: main.py
2/study-ml-app-pipeline/pipeline/predict_job/: main.py
2/study-ml-app-pipeline/pipeline/seed_job/: main.py
2/study-ml-app-pipeline/pipeline/train_job/: main.py
2/study-ml-app-pipeline/pipeline/training_job/: main.py
2/study-ml-app-pipeline/scripts/: core.py
2/study-ml-app-pipeline/tests/: conftest.py
2/study-ml-app-pipeline/tests/e2e/: conftest.py  test_pages.py
2/study-ml-app-pipeline/tests/integration/: test_api.py  test_pipeline.py
2/study-ml-app-pipeline/tools/: check_docker_layout.py
3/study-hybrid-search-cloud/ml/data/: __init__.py  job.py  pyproject.toml
3/study-hybrid-search-cloud/ml/embed/: pyproject.toml
3/study-hybrid-search-cloud/ml/sync/: pyproject.toml
3/study-hybrid-search-cloud/ml/train/: pyproject.toml
3/study-hybrid-search-cloud/ml/training/: __init__.py  job.py  model_builder.py  pyproject.toml  trainer.py
3/study-hybrid-search-local/: .dockerignore  .gitignore  CLAUDE.md  IMPLEMENTATION_REMOVED.md  Makefile  README.md  docker-compose.yml  pyproject.toml
3/study-hybrid-search-local/app/: dependencies.py  main.py  middleware.py
3/study-hybrid-search-local/app/api/: feedback.py  search.py
3/study-hybrid-search-local/docs/: 01_仕様と設計.md  02_移行ロードマップ.md  03_実装カタログ.md  04_運用.md  TASKS.md
3/study-hybrid-search-local/scripts/: README.md
4/study-hybrid-search-gcp/common/: pyproject.toml
7/study-hybrid-search-gke/: .cursor_shell_test  .gcloudignore  .gitignore  CLAUDE.md  Makefile  README.md  cloudbuild.encoder.yaml  pyproject.toml
7/study-hybrid-search-gke/app/: __init__.py  composition_root.py  main.py  observability.py
7/study-hybrid-search-gke/docs/: 01_仕様と設計.md  02_移行ロードマップ-Port-Adapter-DI.md  02_移行ロードマップ.md  02_移行ロードマップ切り替え基盤.md  03_実装カタログ.md  04_検証.md  04_運用.md  05_phase4_to_phase5_refactor_plan.md  05_運用.md  README.md
7/study-hybrid-search-gke/env/: README.md
7/study-hybrid-search-gke/monitoring/: README.md
7/study-hybrid-search-gke/pipeline/: __init__.py
7/study-hybrid-search-gke/scripts/: README.md  _common.py
7/study-hybrid-search-gke/tests/: conftest.py
(+1677 files in other folders)
