[project]
name = "study-ml-foundations"
version = "0.1.0"
description = "Phase 1 ML foundations (train/evaluate)"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings[yaml]>=2.4",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "numpy>=1.26,<3",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "wandb>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "testcontainers[postgres]>=4.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
