[project]
name = "study-hybrid-search-local"
version = "0.1.0"
description = "Local hybrid search pipeline (Meilisearch + ME5 + LightGBM LambdaRank)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "numpy>=1.26,<3",
    "lightgbm>=4.5",
    "redis>=5.2",
    "wandb>=0.17",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "app/tests",
    "common/tests",
    "tests/unit/pipeline",
]
pythonpath = [
    ".",
    "common/src",
    "pipeline/batch",
]
