[project]
name = "ml-data"
version = "0.1.0"
description = "Cloud Run Job and CLI for embedding and sync"
requires-python = ">=3.12"
dependencies = [
    "common",
    "google-auth>=2.36",
    "google-cloud-bigquery>=3.25",
    "httpx>=0.27",
    "numpy>=2.0",
]

[project.scripts]
embed = "ml.data.job:main"
meili-sync = "ml.data.loaders.meili_sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
