[project]
name = "ml-embed"
version = "0.1.0"
description = "Cloud Run Job — property text → multilingual-e5 embeddings → BigQuery"
requires-python = ">=3.12"
dependencies = [
    "common",
    "google-auth>=2.36",
    "httpx>=0.27",
    "numpy>=2.0",
]

[project.scripts]
embed = "embed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embed"]
