[project]
name = "ml-sync"
version = "0.1.0"
description = "CLI — feature_mart.properties_cleaned → Meilisearch index upsert"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.36",
    "google-cloud-bigquery>=3.25",
    "httpx>=0.27",
]

[project.scripts]
meili-sync = "sync.meili_sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync"]
