[project]
name = "ml-training"
version = "0.1.0"
description = "Cloud Run Job - LightGBM LambdaRank training"
requires-python = ">=3.12"
dependencies = [
    "common",
    "google-auth>=2.36",
    "httpx>=0.27",
    "lightgbm>=4.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "wandb>=0.17",
]

[project.scripts]
rank-train = "ml.training.job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
