[project]
name = "embed"
version = "0.1.0"
description = "ML pipeline — property embedding (Vertex CPR encoder + KFP pipeline + Cloud Run Job writer)"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "google-auth>=2.36",
    "google-cloud-aiplatform>=1.71",
    "google-cloud-pipeline-components>=2.17",
    "google-cloud-storage>=2.18",
    "httpx>=0.27",
    "kfp>=2.9,<3",
    "numpy>=2.0",
    "pandas>=2.2",
    "sentence-transformers>=3.0",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
embed = "embed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embed"]
