[project]
name = "serve"
version = "0.1.0"
description = "Vertex CPR reranker inference server (LightGBM Booster)"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "google-cloud-storage>=2.18",
    "lightgbm>=4.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serve"]
