[project]
name = "sync"
version = "0.1.0"
description = "Meilisearch index sync CLI"
requires-python = ">=3.12"
dependencies = [
    "common",
    "google-auth>=2.36",
    "google-cloud-storage>=2.18",
    "httpx>=0.27",
]

[project.scripts]
meili-sync = "sync.meili_sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync"]
