[project]
name = "train"
version = "0.1.0"
description = "ML pipeline — LightGBM LambdaRank reranker training (Cloud Run Job + KFP pipeline)"
requires-python = ">=3.12"
dependencies = [
    "common",
    "google-auth>=2.36",
    "google-cloud-aiplatform>=1.71",
    "google-cloud-pipeline-components>=2.17",
    "google-cloud-storage>=2.18",
    "httpx>=0.27",
    "kfp>=2.9,<3",
    "lightgbm>=4.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "wandb>=0.17",
]

[project.scripts]
rank-train = "train.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/train"]
